[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://images/Rocket Relay Logo.png" type="Texture" id=2]
[ext_resource path="res://fonts/DefaultFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/Sound.png" type="Texture" id=4]
[ext_resource path="res://images/MusicIcon.png" type="Texture" id=5]
[ext_resource path="res://gui/ParallaxBackground.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 670.0
custom_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 35.0
margin_top = 10.0
margin_right = 285.0
margin_bottom = 260.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 320.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 70 )
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="PlayEndless" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 340.0
margin_right = 320.0
margin_bottom = 410.0
rect_min_size = Vector2( 100, 70 )
custom_fonts/font = ExtResource( 3 )
text = "Play Endless"

[node name="Rockets" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 320.0
margin_bottom = 420.0
rect_min_size = Vector2( 100, 70 )
custom_fonts/font = ExtResource( 3 )
text = "Rocket Info and Upgrades"

[node name="Instructions" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 320.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 70 )
custom_fonts/font = ExtResource( 3 )
text = "How to Play"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 510.0
margin_right = 320.0
margin_bottom = 580.0
rect_min_size = Vector2( 100, 70 )
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 590.0
margin_right = 320.0
margin_bottom = 660.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 88.0
margin_right = 232.0
margin_bottom = 70.0

[node name="Sound" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 4 )

[node name="Music" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
texture_normal = ExtResource( 5 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 6 )]

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayEndless" to="." method="_on_PlayEndless_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Rockets" to="." method="_on_Rockets_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
